working on html and css

--- a/Angular/proj-trend/src/app/app.component.html
+++ b/Angular/proj-trend/src/app/app.component.html
@@ -1,2 +1,20 @@
+<mat-drawer-container class="container" autosize>
+    <mat-drawer #drawer class="sidenav">
+        <button color="primary" mat-button routerLink="#">Example</button>
+        <button color="primary" mat-button routerLink="#">Example</button>
+        <button color="primary" mat-button routerLink="#">Example</button>
+    </mat-drawer>
+    <div class="sidenav-content">
+        <mat-toolbar color="primary">
+            <mat-toolbar-row>
+                <button mat-icon-button (click)="drawer.toggle()">
+                    <mat-icon>menu</mat-icon>
+                </button>
 
-<router-outlet></router-outlet>
+                <span>Project Trending</span>
+                <span class="spacer"></span>
+            </mat-toolbar-row>
+        </mat-toolbar>
+        <router-outlet></router-outlet>
+    </div>
+</mat-drawer-container>
