--- a/Angular/proj-trend/src/styles.css
+++ b/Angular/proj-trend/src/styles.css
@@ -1,1 +1,65 @@
-/* You can add global styles to this file, and also import other style files */
+
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+
+body {
+    font-family: Roboto, Arial, sans-serif;
+}
+
+.container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.container .mat-drawer {
+    min-width: 200px;
+}
+
+.container .mat-drawer .mat-button {
+    display: block;
+    width: 100%;
+    text-align: left;
+}
+
+.spacer {
+    flex: 1 1 auto;
+}
+
+.myButt {
+    margin-left: 10px!important;
+}
+
+.example-container {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .example-container > * {
+    width: 100%;
+  }
+
+/* .location {
+    display: block;
+    width: 50%;
+    height: 30%;
+    margin: auto;
+    margin-top: 5%;
+} */
+
+/* .locInput {
+    display: block;
+    padding: 5px;
+    width: 20%;
+    height: 30px;
+    border: none;
+    margin: auto;
+    margin-top: 10%;
+    margin-bottom: 10%;
+}
+
+.locInput:focus {
+    border: none;
+    box-shadow: 2px 5px 10px #6b6a6a;
+} */
