--- a/Angular/proj-trend/src/app/component/global-trends/global-trends.component.html
+++ b/Angular/proj-trend/src/app/component/global-trends/global-trends.component.html
@@ -1,19 +1,29 @@
 
 <h1>Global Trending Topics</h1>
 
-<div *ngFor='let tweet of trends'>
+<div *ngIf="trends;else other_content">
 
-  <mat-list>
-    <mat-list-item>
-      Name: {{ tweet.name }}
-    </mat-list-item>
-    <mat-list-item>
-      Tweet Count: {{ tweet.tweets }}
-    </mat-list-item>
-    <mat-list-item>
-      <a target="blank" href="{{ tweet.url }}">Url</a>
-    </mat-list-item>
-    <mat-divider></mat-divider>
-  </mat-list>
 
+    <div *ngFor='let tweet of trends'>
+      <mat-list>
+        <mat-list-item>
+          Name: {{ tweet.name }}
+          <br>
+          Tweet Count: {{ tweet.tweets }}
+          <br>
+        </mat-list-item>
+        <mat-list-item>
+          <a target="blank" href="{{ tweet.url }}">Url</a>
+        </mat-list-item>
+        <mat-divider></mat-divider>
+      </mat-list>
+    </div>
+    <mat-paginator
+      [length]="length"
+      [pageSize]="pageSize"
+      [pageSizeOptions]="pageSizeOptions"
+      (page)="onPageChange($event)"
+    ></mat-paginator>
 </div>
+
+<ng-template #other_content>No Tweets available...</ng-template>
