--- a/Angular/proj-trend/src/styles.css
+++ b/Angular/proj-trend/src/styles.css
@@ -1,16 +1,15 @@
 
-@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+
+* {
+}
 
 body {
     font-family: Roboto, Arial, sans-serif;
+    margin: 0;
 }
 
 .container {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
 }
 
 .container .mat-drawer {
@@ -28,38 +27,39 @@ body {
 }
 
 .myButt {
-    margin-left: 10px!important;
+    margin-left: 15px!important;
 }
 
-.example-container {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .example-container > * {
-    width: 100%;
-  }
+.form {
+    width: 75%;
+    height: 100px;
+    margin: auto;
+}
 
-/* .location {
-    display: block;
-    width: 50%;
-    height: 30%;
+.innerForm {
+    text-align: center;
+    width: 500px;
     margin: auto;
     margin-top: 5%;
-} */
-
-/* .locInput {
-    display: block;
-    padding: 5px;
-    width: 20%;
-    height: 30px;
-    border: none;
-    margin: auto;
-    margin-top: 10%;
-    margin-bottom: 10%;
 }
 
-.locInput:focus {
+.inputBox {
+    height: 30px;
+    padding: 5px;
     border: none;
-    box-shadow: 2px 5px 10px #6b6a6a;
-} */
+}
+
+.inputBox:focus {
+    box-shadow: 5px 10px 8px #888888;
+}
+
+.formTitle {
+    margin-top: 5px;
+}
+
+hr {
+    width: 75%!important;
+}
+
+mat-list-item {
+}
