--- a/proj-trend/src/app/component/location-trends/location-trends.component.html
+++ b/proj-trend/src/app/component/location-trends/location-trends.component.html
@@ -8,7 +8,7 @@
 
 
 <hr>
-<div *ngFor='let tweet of tweets'>
+<div class="center" *ngFor='let tweet of tweets'>
 
     <mat-list>
       <mat-list-item>
